--- a/index.html
+++ b/index.html
@@ -312,8 +312,22 @@
         </div>
     </div>
 
-    <section class="happy-with-us">
-        
+    <section class="happy-with-us-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12">
+                    <div class="section-title text-center">
+                        <a class="btn shortbtn shortbtn-white" href="#"><i><img src="images/feet.png"></i>Who We are</a>
+                        <h3>Your Pets Will Be Extremely<br> Happy With Us</h3>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="feature-box">
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Optional JavaScript; choose one of the two! -->
 
