--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/style.css" />
     <title>Best Pet Vet</title>
   </head>
@@ -38,7 +39,7 @@
       <div class="spaceleft-right-30">
         <nav class="navbar navbar-expand-md">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="images/logo.png" /></a>
+            <a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" /></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -48,7 +49,7 @@
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
-              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"><i class="bi bi-list"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav me-auto mb-2 mb-md-0">
@@ -123,7 +124,7 @@
                             </div>
                         </div>
                         <div class="col-md-4">
-                            <div class="arrow-down text-center"><img src="images/arrow-down.png"></div>
+                            <a href="#footer" class="arrow-down text-center"><img src="images/arrow-down.png"></a>
                         </div>
                         <div class="col-md-4">
                             <div class="video-link users-rating">
@@ -140,7 +141,7 @@
     <section class="service-section-wrapper">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="service-box">
                         <div class="service-box-title">
                             <i><img src="images/dog.png"></i>
@@ -150,7 +151,7 @@
                         <a href="#" class="arr-shape"><img src="images/arr-shape.png"></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="service-box">
                         <div class="service-box-title">
                             <i><img src="images/car.png"></i>
@@ -160,7 +161,7 @@
                         <a href="#" class="arr-shape"><img src="images/arr-shape.png"></a>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="service-box">
                         <div class="service-box-title">
                             <i><img src="images/grom.png"></i>
@@ -193,12 +194,12 @@
                        <h3>We Love to Take Care of Your Pets</h3> 
                        <p>We provides expert medical care for pets, including routine check-ups, vaccinations, surgeries, and emergency services. With skilled staff, advanced technology, and compassionate care, pets receive top-notch treatment.</p>
                        <ul>
-                            <li><i><img src="images/tick.png"></i> <a href="#">Vaccinations</a></li>
-                            <li><i><img src="images/tick.png"></i> <a href="#">Dental cleanings</a></li>
-                            <li><i><img src="images/tick.png"></i> <a href="#">Blood tests</a></li>
-                            <li><i><img src="images/tick.png"></i> <a href="#">Intensive care unit (ICU) services</a></li>
-                            <li><i><img src="images/tick.png"></i> <a href="#">Medication</a></li>
-                            <li><i><img src="images/tick.png"></i> <a href="#">Pharmacy Services</a></li>
+                            <li><a href="#">Vaccinations</a></li>
+                            <li><a href="#">Dental cleanings</a></li>
+                            <li><a href="#">Blood tests</a></li>
+                            <li><a href="#">Intensive care unit (ICU) services</a></li>
+                            <li><a href="#">Medication</a></li>
+                            <li><a href="#">Pharmacy Services</a></li>
                        </ul>
                        <a class="btn btn-style" href="#">Know More <i><img src="images/redarr.png"></i></a>
                     </div>
@@ -321,7 +322,7 @@
                         <h3>Your Pets Will Be Extremely<br> Happy With Us</h3>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="feature-box margin-bottom-60">
                         <i class="pet-icon"><img src="images/pet-care1.png" class="img-fluid"></i>
                         <div class="feature-box-text">
@@ -337,10 +338,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="dog-image"><img src="images/dog-image.png" class="img-fluid"></div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4 col-md-12">
                     <div class="feature-box margin-bottom-60">
                         <i class="pet-icon"><img src="images/best.png" class="img-fluid"></i>
                         <div class="feature-box-text">
@@ -513,6 +514,120 @@
             </div>
         </div>
     </section>
+    <section class="newsletter-section space-top-bottom-100">
+        <div class="container">
+            <div class="newsletter-wrap">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="subscribe-title">
+                            <i><img src="images/sub-icon.png" class="img-fluid"></i>
+                            <h6>Subscribe To Our Newsletter</h6>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <form class="row g-3">
+                            <div class="subscribe-form-style">
+                              <input type="email" class="form-control" placeholder="Email Address">
+                              <button type="submit" class="btn btn-style">Discover Now <i><img src="images/arr.png"></i></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-blue-part">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="footer-menu">
+                            <ul>
+                                <li><a href="#">Hygiene</a></li>
+                                <li><a href="#">Training</a></li>
+                                <li><a href="#">Food</a></li>
+                                <li><a href="#">Products</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="d-flex icon-link-group justify-content-end">
+                            <div class="phone-no">
+                                <a href="tel:+971585117558"><i><img src="images/ph-white.png"></i> +971585 117 558</a>
+                            </div>
+                            <div class="phone-no email-link">
+                                <a href="mailto:davor.jocic@gmail.com"><i><img src="images/env-white.png"></i> davor.jocic@gmail.com</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="white-footer" id="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="footer-left-side">
+                            <div class="footer-logo-and-links">
+                                <div class="footer-logo">
+                                    <img src="images/footer-logo.png">
+                                </div>
+                                <div class="social-links">
+                                    <ul>
+                                        <li><a href="#"><i class="bi bi-facebook"></i></a></li>
+                                        <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+                                        <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
+                                        <li><a href="#"><i class="bi bi-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="dog-image"><img src="images/dogimage.jpg" class="img-fluid"></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <h3 class="footer-title">Where Your Pet's Health Comes First, Because Every Pet Deserves the Best!</h3>
+                        <div class="row">
+                            <div class="col-md-4">
+                                <div class="footer-links">
+                                    <h6>Useful Link</h6>
+                                    <ul>
+                                        <li><a href="#">Company</a></li>
+                                        <li><a href="#">About</a></li>
+                                        <li><a href="#">Contact</a></li>
+                                    </ul>                                    
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="footer-links">
+                                    <h6>Working Time</h6>
+                                    <ul>
+                                        <li><a href="#">Mon - Fri: 9.00am - 5.00pm</a></li>
+                                        <li><a href="#">Saturday: 10.00am - 6.00pm</a></li>
+                                        <li><a href="#">Sunday Closed</a></li>
+                                    </ul>                                    
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="footer-links">
+                                    <h6>Our address</h6>
+                                    <a href="https://maps.app.goo.gl/HexHLVdV8MpsRFem8" target="_blank">Thalassa Building, Al Raha-Al Dana, Abu Dhabi, UAE</a>
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="seprator">
+                        <div class="d-flex">
+                            <div class="text-left terms-con">
+                                <a href="#">Terms & Condition</a> <i>|</i> <a href="#">Privacy Policy</a>
+                            </div>
+                            <div class="copyright">
+                                <p class="text-right">Copyright © 2024 Best Pet Vet. All Rights Reserved.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -528,7 +643,7 @@
             nav: true,
             responsive: {
                 0: {
-                    items: 1
+                    items: 2
                 },
                 600: {
                     items: 3
@@ -546,7 +661,18 @@
             nav:true,
             autoplay:false,
             autoplayTimeout:2000,
-            autoplayHoverPause:true
+            autoplayHoverPause:true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 2
+                },
+                1000: {
+                    items: 3
+                }
+            }
         });
         
      </script>
