--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="icon" type="image/x-icon" href="images/fav.png">
     <link rel="stylesheet" href="css/style.css" />
     <title>Best Pet Vet</title>
   </head>
@@ -39,7 +40,7 @@
       <div class="spaceleft-right-30">
         <nav class="navbar navbar-expand-md">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" /></a>
+            <a class="navbar-brand" href="index.html"><img class="img-fluid" src="images/logo.png" /></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -54,22 +55,22 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
               <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="about-us.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Gallery</a>
+                  <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
+                  <a class="nav-link" href="blogs.html">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact Us</a>
+                  <a class="nav-link" href="contact-us.html">Contact Us</a>
                 </li>
               </ul>
               <form class="d-flex">
@@ -570,7 +571,9 @@
                         <div class="footer-left-side">
                             <div class="footer-logo-and-links">
                                 <div class="footer-logo">
-                                    <img src="images/footer-logo.png">
+                                    <a href="index.html">
+                                        <img src="images/footer-logo.png">
+                                    </a>
                                 </div>
                                 <div class="social-links">
                                     <ul>
@@ -591,9 +594,9 @@
                                 <div class="footer-links">
                                     <h6>Useful Link</h6>
                                     <ul>
-                                        <li><a href="#">Company</a></li>
-                                        <li><a href="#">About</a></li>
-                                        <li><a href="#">Contact</a></li>
+                                        <li><a href="services.html">Services</a></li>
+                                        <li><a href="about-us.html">About</a></li>
+                                        <li><a href="contact-us.html">Contact</a></li>
                                     </ul>                                    
                                 </div>
                             </div>
@@ -601,9 +604,9 @@
                                 <div class="footer-links">
                                     <h6>Working Time</h6>
                                     <ul>
-                                        <li><a href="#">Mon - Fri: 9.00am - 5.00pm</a></li>
-                                        <li><a href="#">Saturday: 10.00am - 6.00pm</a></li>
-                                        <li><a href="#">Sunday Closed</a></li>
+                                        <li>Mon - Fri: 9.00am - 5.00pm</li>
+                                        <li>Saturday: 10.00am - 6.00pm</li>
+                                        <li>Sunday Closed</li>
                                     </ul>                                    
                                 </div>
                             </div>
@@ -617,7 +620,7 @@
                         <hr class="seprator">
                         <div class="d-flex">
                             <div class="text-left terms-con">
-                                <a href="#">Terms & Condition</a> <i>|</i> <a href="#">Privacy Policy</a>
+                                <a href="terms-condition.html">Terms & Condition</a> <i>|</i> <a href="privacy-policy.html">Privacy Policy</a>
                             </div>
                             <div class="copyright">
                                 <p class="text-right">Copyright © 2024 Best Pet Vet. All Rights Reserved.</p>
