--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -91,7 +91,7 @@
                 >
               </div>
               <div class="get-in-touch-btn">
-                <a class="btn btn-style" href="#"
+                <a class="btn btn-style" href="contact-us.html"
                   >Get In Touch <i><img src="images/arr.png" /></i
                 ></a>
               </div>
