--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <h4>Treatment</h4>
                         </div>
                         <p>We providing vaccinations, surgeries, diagnostics, and emergency care for your pets.</p>
-                        <a href="#" class="arr-shape"><img src="images/arr-shape.png"></a>
+                        <a href="services.html" class="arr-shape"><img src="images/arr-shape.png"></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12">
@@ -159,7 +159,7 @@
                             <h4>Veterinary Care</h4>
                         </div>
                         <p>We  ensures pets' health through regular check-ups, vaccinations, and treatments.</p>
-                        <a href="#" class="arr-shape"><img src="images/arr-shape.png"></a>
+                        <a href="services.html" class="arr-shape"><img src="images/arr-shape.png"></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-12">
@@ -169,7 +169,7 @@
                             <h4>Pet Grooming</h4>
                         </div>
                         <p>We ensures cleanliness, health, comfort, and prevents skin issues.</p>
-                        <a href="#" class="arr-shape"><img src="images/arr-shape.png"></a>
+                        <a href="services.html" class="arr-shape"><img src="images/arr-shape.png"></a>
                     </div>
                 </div>
             </div>
