--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             <li><a href="#">Medication</a></li>
                             <li><a href="#">Pharmacy Services</a></li>
                        </ul>
-                       <a class="btn btn-style" href="#">Know More <i><img src="images/redarr.png"></i></a>
+                       <a class="btn btn-style" href="about-us.html">Know More <i><img src="images/redarr.png"></i></a>
                     </div>
                 </div>
             </div>
