--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 Your adored Pet<h1>
                             <hr>
                             <p>We are fully committed to the health and hygiene of your furry best friends.</p>
-                            <a class="btn btn-style btn-white" href="#">Contact Us <i><img src="images/arr-bl.png"></i></a>
+                            <a class="btn btn-style btn-white" href="contact-us.html">Contact Us <i><img src="images/arr-bl.png"></i></a>
                         </div>
                     </div>
                 </div>
