--- a/blogs.html
+++ b/blogs.html
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper margin-bottom-50">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper margin-bottom-50">
                         <div class="blog-thumbnail-img">
                             <img src="images/b1.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
@@ -127,7 +127,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper margin-bottom-50">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper margin-bottom-50">
                         <div class="blog-thumbnail-img">
                             <img src="images/b2.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
@@ -136,7 +136,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper margin-bottom-50">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper margin-bottom-50">
                         <div class="blog-thumbnail-img">
                             <img src="images/b3.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
@@ -145,7 +145,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper margin-bottom-50">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper margin-bottom-50">
                         <div class="blog-thumbnail-img">
                             <img src="images/b4.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
@@ -154,7 +154,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper margin-bottom-50">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper margin-bottom-50">
                         <div class="blog-thumbnail-img">
                             <img src="images/b5.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
@@ -163,7 +163,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper margin-bottom-50">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper margin-bottom-50">
                         <div class="blog-thumbnail-img">
                             <img src="images/b6.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
@@ -172,7 +172,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper">
                         <div class="blog-thumbnail-img">
                             <img src="images/b1.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
@@ -181,7 +181,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper">
                         <div class="blog-thumbnail-img">
                             <img src="images/b2.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
@@ -190,7 +190,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="blog-thumbnail-wrapper no-margin-mobile">
+                    <a href="blog-detail.html" class="blog-thumbnail-wrapper no-margin-mobile">
                         <div class="blog-thumbnail-img">
                             <img src="images/b3.jpg" alt="blog thumbnail" class="img-fluid">
                         </div>
