--- a/contact-us.html
+++ b/contact-us.html
@@ -32,6 +32,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="icon" type="image/x-icon" href="images/fav.png">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>Best Pet Vet</title>
   </head>
@@ -140,7 +141,7 @@
                                 <textarea class="form-control field-style" placeholder="Message" rows="3"></textarea>
                             </div>
                         </div>
-                        
+                        <div class="g-recaptcha" data-sitekey="6Ld1_hwqAAAAAF711SHIaXoFgJ-ZH6bK3r8tz_Pm"></div>
                         <button type="submit" class="btn btn-style">Submit <i><img src="images/arr.png"></i></button>
                     </form>
                 </div>
